--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/scottburch/webpack-beep-plugin/issues"
   },
-  "homepage": "https://github.com/scottburch/webpack-beep-plugin#readme"
+  "homepage": "https://github.com/scottburch/webpack-beep-plugin#readme",
+  "dependencies": {
+    "webpack": "^1.12.4"
+  }
 }
